@@ -1,12 +1,13 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/libglade-2.6.4.ebuild,v 1.9 2011/01/27 11:49:02 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/libglade-2.6.4.ebuild,v 1.12 2011/09/29 16:50:18 pacho Exp $
 
 EAPI="3"
 GCONF_DEBUG="no"
+GNOME2_LA_PUNT="yes"
 PYTHON_DEPEND="2"
 
-inherit eutils gnome2 python autotools flag-o-matic
+inherit eutils gnome2 python virtualx flag-o-matic autotools
 
 DESCRIPTION="Library to construct graphical interfaces at runtime"
 HOMEPAGE="http://library.gnome.org/devel/libglade/stable/"
@@ -14,7 +15,7 @@ HOMEPAGE="http://library.gnome.org/devel/libglade/stable/"
 LICENSE="LGPL-2"
 SLOT="2.0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="doc test"
+IUSE="doc static-libs test"
 
 RDEPEND=">=dev-libs/glib-2.10:2
 	>=x11-libs/gtk+-2.8.10:2
@@ -26,6 +27,7 @@ DEPEND="${RDEPEND}
 	doc? ( >=dev-util/gtk-doc-1 )"
 
 pkg_setup() {
+	G2CONF="${G2CONF} $(use_enable static-libs static)"
 	DOCS="AUTHORS ChangeLog NEWS README"
 	python_set_active_version 2
 }
@@ -38,6 +40,9 @@ src_prepare() {
 	# patch to not throw a warning with gtk+-2.14 during tests, as it triggers abort
 	epatch "${FILESDIR}/${PN}-2.6.3-fix_tests-page_size.patch"
 
+	sed -i -e 's:-D[A-Z_]*DISABLE_DEPRECATED:$(NULL):g' \
+		glade/Makefile.am glade/Makefile.in || die
+
 	if ! use test; then
 		sed 's/ tests//' -i Makefile.am Makefile.in || die "sed failed"
 	fi
@@ -46,6 +51,10 @@ src_prepare() {
 
 	# Needed for solaris, else gcc finds a syntax error in /usr/include/signal.h
 	[[ ${CHOST} == *-solaris* ]] && append-flags "-D__EXTENSIONS__"
+}
+
+src_test() {
+	Xemake check || die "make check failed"
 }
 
 src_install() {
